--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <h2>I'm a Web Developer</h2>
     <hr />
     <p>
-    <h3><a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/Movies.png" height="200" alt="Screenshot of movie ranking"/><br />
     </p>
 
-    <h3><a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday Invite Project</a></h3>
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/Birthday.png" height="200" alt="Screenshot of birthday project"/>
     <hr />
     <br />
