--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dennis's Portfolio</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <h1>Dennis Offei's Portfolio</h1>
