--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,25 @@
 <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<p>With a Master’s degree in Business Intelligence and Digital Marketing, I bring over five years of hands-on 
+  experience in social media management, content creation, and community engagement. My background combines 
+  analytical skills and creative flair, allowing me to create impactful digital strategies that drive brand 
+  growth and community interaction.</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+<p>Key Areas of Expertise:
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+  <li> 
+  Content Creation & Strategy: Designing engaging, authentic, and data-driven content for diverse platforms.
+  </li> <br/>
+  
+  <li>Social Media Listening & Analysis: Proficient in using tools like Social News Desk, Hootsuite, and Fanpage Karma 
+    to track metrics, analyse trends, and shape campaigns based on data-driven insights.</li> <br />
+  
+  <li>Community Management: Building loyal online communities, engaging audiences, and increasing followers through 
+    targeted social media initiatives.</li> <br />
+  
+  <li>Campaign Management: From conception to execution, I ensure every campaign not only meets but exceeds client 
+    expectations.</li> <br />
+</p>
+
+<p>My goal is to make a meaningful impact in the digital space by crafting innovative solutions that resonate with 
+  audiences and align with organizational objectives. I’m passionate about staying ahead of digital trends and am 
+  always open to exploring new ideas that drive engagement and growth.</p>
